# Proiect_POO-Hangman

./: .gitmodules.ini  CMakeLists.txt  README.md  defaults.txt  leaderboard.txt  main.cpp  technology_words.txt
src/cpp/: Animal.cpp  DefaultWordManager.cpp  Game.cpp  Game_Timer.cpp  Geografie.cpp  HangmanGameManager.cpp  Hangman_UI.cpp  Hint_Game.cpp  Leaderboard.cpp  Subject.cpp  Technology.cpp  Word_Manager.cpp  invalidInputError.cpp  scor.cpp
src/headers/: Animal.hpp  DefaultWordManager.hpp  Game.hpp  Game_Timer.hpp  Geografie.hpp  HangmanGameManager.hpp  Hangman_UI.hpp  Hint_Game.hpp  Leaderboard.hpp  Observer.hpp  Subject.hpp  Technology.hpp  WordManagerFacotry.hpp  Word_Manager.hpp  invalidInputException.hpp  scor.hpp
